iptables.txt
# Generated by iptables-save v1.8.4 on Sun Aug 30 11:55:51 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:forwarding_lan_rule - [0:0]
:forwarding_rule - [0:0]
:forwarding_wan_rule - [0:0]
:input_lan_rule - [0:0]
:input_rule - [0:0]
:input_wan_rule - [0:0]
:output_lan_rule - [0:0]
:output_rule - [0:0]
:output_wan_rule - [0:0]
:reject - [0:0]
:syn_flood - [0:0]
:zone_lan_dest_ACCEPT - [0:0]
:zone_lan_forward - [0:0]
:zone_lan_input - [0:0]
:zone_lan_output - [0:0]
:zone_lan_src_ACCEPT - [0:0]
:zone_wan_dest_ACCEPT - [0:0]
:zone_wan_dest_REJECT - [0:0]
:zone_wan_forward - [0:0]
:zone_wan_input - [0:0]
:zone_wan_output - [0:0]
:zone_wan_src_REJECT - [0:0]
-A INPUT -p tcp -m string --string "flag" --algo kmp --to 65535 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i lo -j ACCEPT
-A INPUT -j input_rule
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood
-A FORWARD -d 10.12.12.10/32 -i eth0 -o eht1 -j ACCEPT
-A FORWARD ! -d 10.12.12.10/32 -i eth0 -o eth1 -j DROP
-A FORWARD -p tcp -m string --string "flag" --algo kmp --to 65535 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j forwarding_rule
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j reject
-A OUTPUT -p tcp -m string --string "flag" --algo kmp --to 65535 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j output_rule
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A reject -j REJECT --reject-with icmp-port-unreachable
-A syn_flood -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/sec --limit-burst 50 -j RETURN
-A syn_flood -j DROP
-A zone_lan_forward -j forwarding_lan_rule
-A zone_lan_forward -j zone_wan_dest_ACCEPT
-A zone_lan_forward -m conntrack --ctstate DNAT -j ACCEPT
-A zone_lan_forward -j zone_lan_dest_ACCEPT
-A zone_lan_input -j input_lan_rule
-A zone_lan_input -m conntrack --ctstate DNAT -j ACCEPT
-A zone_lan_input -j zone_lan_src_ACCEPT
-A zone_lan_output -j output_lan_rule
-A zone_lan_output -j zone_lan_dest_ACCEPT
-A zone_wan_forward -j forwarding_wan_rule
-A zone_wan_forward -p esp -j zone_lan_dest_ACCEPT
-A zone_wan_forward -p udp -m udp --dport 500 -j zone_lan_dest_ACCEPT
-A zone_wan_forward -m conntrack --ctstate DNAT -j ACCEPT
-A zone_wan_forward -j zone_wan_dest_REJECT
-A zone_wan_input -j input_wan_rule
-A zone_wan_input -p udp -m udp --dport 68 -j ACCEPT
-A zone_wan_input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A zone_wan_input -p igmp -j ACCEPT
-A zone_wan_input -m conntrack --ctstate DNAT -j ACCEPT
-A zone_wan_input -j zone_wan_src_REJECT
-A zone_wan_output -j output_wan_rule
-A zone_wan_output -j zone_wan_dest_ACCEPT
COMMIT
# Completed on Sun Aug 30 11:55:51 2020
# Generated by iptables-save v1.8.4 on Sun Aug 30 11:55:51 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:postrouting_lan_rule - [0:0]
:postrouting_rule - [0:0]
:postrouting_wan_rule - [0:0]
:prerouting_lan_rule - [0:0]
:prerouting_rule - [0:0]
:prerouting_wan_rule - [0:0]
:zone_lan_postrouting - [0:0]
:zone_lan_prerouting - [0:0]
:zone_wan_postrouting - [0:0]
:zone_wan_prerouting - [0:0]
-A PREROUTING -j prerouting_rule
-A POSTROUTING -j postrouting_rule
-A zone_lan_postrouting -j postrouting_lan_rule
-A zone_lan_prerouting -j prerouting_lan_rule
-A zone_wan_postrouting -j postrouting_wan_rule
-A zone_wan_postrouting -j MASQUERADE
-A zone_wan_prerouting -j prerouting_wan_rule
COMMIT
# Completed on Sun Aug 30 11:55:51 2020
